# RAPTor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dotbashrc  dotcshrc
RAPTor/: CMakeLists.txt  Makefile  SDL.supp  dotbashrc  dotcshrc
RAPTor/animation/: README
RAPTor/animation/src/: rt_anim.py
RAPTor/common/: CMakeLists.txt  bit_cast.h  common.cc  common.h  logging.h  perlin_noise_2d.cc  perlin_noise_2d.h  perlin_noise_3d.cc  perlin_noise_3d.h  point2d.h  point_t.h  quaternion_t.h  simd.h  simplex_noise_2d.cc  simplex_noise_2d.h  simplex_noise_3d.cc  simplex_noise_3d.h  sort.cc  sort.h
RAPTor/convex_decomposition/: CMakeLists.txt  Makefile  Project.mk  circular_list.h  common.h  convex_decomposition.cc  convex_decomposition.h  convex_decomposition_options.h  convex_mesh.h  dac_convex_hull.cc  dac_convex_hull.h  dac_convex_hull_2d.h  dac_convex_hull_3d.h  discretisation_type.h  graph.cc  hull_parser.h  incremental_convex_hull.h  main.cc  manifold_mesh.h  mesh_decimator.h  parser.h  plane.h  point_t.h  primitive_set.h  quaternion_t.h  simd.h  tetrahedron_set.cc  tetrahedron_set.h  tm_mesh.h  vec.h  vec.inl  volume.cc  volume.h  voxel_set.cc  voxel_set.h  voxel_value.h
RAPTor/convex_decomposition/done/: allocator.cc  circular_list.inl  convex_decomposition.cc  convex_hull.cc  convex_hull.h  manifold_mesh.cc  mesh_decimator.cc  mesh_decimator.h  raycast_mesh.cc
RAPTor/convex_decomposition/regression_tests/: Makefile  convex_decomposition_fixture.h  dac_convex_hull_3d_regression_tests.cc  main.cc  regression_fixture.h  tetrahedron_no_pca_hull_approx_tests.cc  tetrahedron_no_pca_no_hull_approx_tests.cc  tetrahedron_pca_hull_approx_tests.cc  voxel_no_pca_hull_approx_simplify_tests.cc  voxel_no_pca_hull_approx_tests.cc  voxel_no_pca_no_hull_approx_tests.cc  voxel_pca_hull_approx_tests.cc
RAPTor/convex_decomposition/unit_tests/: Makefile  convex_decomposition_tests.cc  convex_mesh_tests.cc  dac_convex_hull_2d_tests.cc  dac_convex_hull_3d_tests.cc  dac_convex_hull_tests.cc  incremental_convex_hull_tests.cc  primitive_set_tests.cc  tetrahedron_set_tests.cc  tm_mesh_tests.cc  volume_tests.cc  voxel_set_tests.cc
RAPTor/docs/: graphics_project_proposal.doc  graphics_project_proposal_04_08_09.ppt  ray_tracing_update_14_11_09.ppt
RAPTor/games/quake2/: Makefile  README.RAPTor  TODO  raptor.cfg
RAPTor/mesh_decimation/: CMakeLists.txt  mesh_decimation.cc  mesh_decimation.h  mesh_decimation_options.h
RAPTor/mesh_decimation/regression_tests/: cumulative_cost_0_00001_tests.cc  cumulative_cost_0_001_tests.cc  cumulative_cost_0_01_tests.cc  cumulative_cost_0_1_tests.cc  cumulative_cost_1_0_tests.cc  merge_cost_0_000000001_tests.cc  merge_cost_0_00001_tests.cc  merge_cost_0_001_tests.cc  merge_cost_0_1_tests.cc  merge_cost_1_0_tests.cc  mesh_decimation_edge_tests.cc  regression_fixture.h  vertex_target_0_2_tests.cc  vertex_target_0_5_tests.cc  vertex_target_0_8_tests.cc  vertex_target_0_95_tests.cc  vertex_target_0_9_tests.cc
RAPTor/mesh_decimation/unit_tests/: main.cc  mesh_decimation_tests.cc
RAPTor/networking/: CMakeLists.txt  Makefile  Project.mk  batcher.h  connection.h  conversion.h  data_receiver.h  fragmenter.h  group.h  hashcode.h  main.cc  message_delivery.h  msg_client.h  msg_data.h  msg_header.h  msg_server.h  networking_constants.h  object_response.h  protocol_stack.cc  protocol_stack.h  rate_limiter.h  recv_connection.h  response_handlers.h  retransmission.h  send_connection.h  sequencer.h  serialisation.h  stack_accessor.h  stack_component.h  stack_controller.h  stack_map_element.h  subscription_response.h  tcp_connection.h  udp_connection.h  user_connection_info.h  vector_stream.h  video_receiver.cc
RAPTor/networking/regression_tests/: Makefile  main.cc
RAPTor/networking/unit_tests/: Makefile  (+20 more)
RAPTor/parsers/: CMakeLists.txt  lwo2_parser.cc  lwo_bloks.h  lwo_chunks.h  lwo_parser.cc  lwo_surf.cc  lwo_surf.h  mgf_parser.cc  mgf_parser.h  normal_calculator.h  obj_parser.h  parser.h  parser_common.h  picture_functions.cc  vertex_map.h
RAPTor/physics_engine/: CMakeLists.txt  Makefile  Project.mk  ReadMe  collision.h  collision_info.h  contact_graph.h  contact_graph_node.cc  contact_graph_node.h  force_info.h  gjk.cc  gjk.h  inertia_tensor.h  isosurface.cc  isosurface.h  lcp_solver.cc  lcp_solver.h  main.cc  matrix_3d.h  meta_ball.h  object_bound.h  pair_manager.h  particle.h  physics_common.cc  physics_common.h  physics_engine.cc  physics_engine.h  physics_object.cc  physics_object.h  physics_options.h  polygon.cc  polygon.h  simplex.cc  simplex.h  simulation_environment.cc  simulation_environment.h  spatial_sub_division.cc  spatial_sub_division.h  tracking_info.h  utility.h  (+1 more)
RAPTor/raytracer/: CMakeLists.txt  Makefile  Project.mk  ReadMe  benchmark.cpp  callgrind.out.ply_before  camera.cc  camera.h  circle_sampler.cc  circle_sampler.h  common.cc  common.h  dotbashrc  ext_colour_t.h  frustrum.h  in_obj_parser.cc  in_obj_parser.h  light.h  line.cc  line.h  main.cc  mem_pool.h  packet_ray.cc  packet_ray.h  primitive_store.h  ray.cc  ray.h  raytracer.cc  raytracer.h  raytracer_event_handler_factory.cc  raytracer_event_handler_factory.h  scene.cc  scene.h  secondary_ray_data.h  simd.cc  simd.h  sobol_numbers_2d.h  sort.cc  sort.h  timing.rpt  (+3 more)
RAPTor/sdl_wrappers/: base_camera.h  sdl_event_handler.h  sdl_event_handler_factory.cc  sdl_event_handler_factory.h  sdl_wrapper.cc  sdl_wrapper.h
RAPTor/terrain_generator/: CMakeLists.txt  Makefile  Project.mk  callgrind.out.29249  grid_cell.h  height_map.h  main.cc
RAPTor/test_coverage/: base_coverage.info  coverage.info  index-sort-f.html  index-sort-l.html  index.html  run_coverage_0.info
RAPTor/vulkan/: CMakeLists.txt  main.cc  vulkan.h
RAPTor/vulkan/shaders/: light.vert  shader.frag  shader.vert
tools/: Common.mk  UnitTest.mk  box_graph.gp  change_resolution.pl  clean_test_data.sh  combine_lcov.sh  fix_absolute_paths.pl  line_graph.gp  lines_of_code.sh  new_branch.sh  per_test_performance.pl  perf_diff.py  performance_parser.pl  run_lcov.sh  run_scan_build.sh  stacked_box_graph.gp  update_test_data.sh
(+2089 files in other folders)
